Fix latex overflow and admin images

--- a/css/note.css
+++ b/css/note.css
@@ -60,6 +60,10 @@ div.g-recaptcha {
   width: 788px;
 }
 
+.latex-container[data-displaymode="block"] > * {
+  overflow-y: hidden;
+}
+
 #leftside h1 {
   display: inline;
 }
